[package]
name = "myrias"
version = "0.1.0"
authors = ["iCrawl <icrawltogo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.10"
serde = { version = "1.0.133", features = ["derive"] }
log = "0.4.14"
rustflake = "0.1.1"
toml = "0.5.8"

[dependencies.rocket_contrib]
version = "0.4.10"
default-features = false
features = ["json"]

[profile.release]
lto = true
codegen-units = 1
